fixed exhibit title alignment

--- a/css/screen.css
+++ b/css/screen.css
@@ -2263,47 +2263,52 @@ nav + .exhibit {
 }
 
 /* line 306, ../sass/breakpoints/_base.scss */
+.exhibits.browse #content > h1:first-of-type {
+  width: 100%;
+}
+
+/* line 307, ../sass/breakpoints/_base.scss */
 #collection-tree {
   margin-left: auto;
   margin-right: auto;
 }
 
-/* line 311, ../sass/breakpoints/_base.scss */
+/* line 312, ../sass/breakpoints/_base.scss */
 #recaptcha_area input {
   display: inline;
 }
 
-/* line 315, ../sass/breakpoints/_base.scss */
+/* line 316, ../sass/breakpoints/_base.scss */
 #neatline #simile {
   width: 62%;
   height: 23%;
 }
 
-/* line 320, ../sass/breakpoints/_base.scss */
+/* line 321, ../sass/breakpoints/_base.scss */
 #neatline.Simile #static-bubble {
   max-height: 74%;
 }
 
-/* line 324, ../sass/breakpoints/_base.scss */
+/* line 325, ../sass/breakpoints/_base.scss */
 #waypoints a.title.highlighted {
   background: #BEEAFF;
 }
 
 /* @end */
 /* @group ----- Browse-all ----- */
-/* line 330, ../sass/breakpoints/_base.scss */
+/* line 331, ../sass/breakpoints/_base.scss */
 .browse-attribution {
   font-style: italic;
   margin-bottom: .75em;
 }
 
-/* line 335, ../sass/breakpoints/_base.scss */
+/* line 336, ../sass/breakpoints/_base.scss */
 .page-meta {
   float: left;
   font-style: italic;
 }
 
-/* line 340, ../sass/breakpoints/_base.scss */
+/* line 341, ../sass/breakpoints/_base.scss */
 .page-meta p {
   margin-top: 0;
 }
@@ -2442,60 +2447,61 @@ nav + .exhibit {
     width: 556px;
   }
 
-  /* line 54, ../sass/breakpoints/_768up.scss */
-  .exhibits #content > h1:first-of-type {
+  /* line 55, ../sass/breakpoints/_768up.scss */
+  .exhibits.show #content > h1:first-of-type,
+  .exhibits.summary #content > h1:first-of-type {
     margin-left: 212px;
   }
 
-  /* line 57, ../sass/breakpoints/_768up.scss */
+  /* line 59, ../sass/breakpoints/_768up.scss */
   .exhibit .description,
   .exhibit .description ~ * {
     width: 412px;
   }
 
   /* columns for tablet-ish widths */
-  /* line 63, ../sass/breakpoints/_768up.scss */
+  /* line 65, ../sass/breakpoints/_768up.scss */
   .tfull {
     width: 100% !important;
   }
 
-  /* line 66, ../sass/breakpoints/_768up.scss */
+  /* line 68, ../sass/breakpoints/_768up.scss */
   .t1of2 {
     width: 50% !important;
     float: left;
   }
 
-  /* line 70, ../sass/breakpoints/_768up.scss */
+  /* line 72, ../sass/breakpoints/_768up.scss */
   .t1of3 {
     width: 33% !important;
     float: left;
   }
 
-  /* line 74, ../sass/breakpoints/_768up.scss */
+  /* line 76, ../sass/breakpoints/_768up.scss */
   .t2of3 {
     width: 67% !important;
     float: left;
   }
 
-  /* line 78, ../sass/breakpoints/_768up.scss */
+  /* line 80, ../sass/breakpoints/_768up.scss */
   .t1of5 {
     width: 20% !important;
     float: left;
   }
 
-  /* line 82, ../sass/breakpoints/_768up.scss */
+  /* line 84, ../sass/breakpoints/_768up.scss */
   .t2of5 {
     width: 40% !important;
     float: left;
   }
 
-  /* line 86, ../sass/breakpoints/_768up.scss */
+  /* line 88, ../sass/breakpoints/_768up.scss */
   .t3of5 {
     width: 60% !important;
     float: left;
   }
 
-  /* line 90, ../sass/breakpoints/_768up.scss */
+  /* line 92, ../sass/breakpoints/_768up.scss */
   .t4of5 {
     width: 80% !important;
     float: left;
@@ -2578,35 +2584,36 @@ nav + .exhibit {
   }
 
   /* line 50, ../sass/breakpoints/_960up.scss */
-  .exhibits #content > h1:first-of-type {
+  .exhibits.show #content > h1:first-of-type,
+  .exhibits.summary #content > h1:first-of-type {
     margin-left: 260px;
   }
 
-  /* line 53, ../sass/breakpoints/_960up.scss */
+  /* line 54, ../sass/breakpoints/_960up.scss */
   .exhibit .description,
   .exhibit .description ~ * {
     width: 785px;
   }
 
   /* columns for desktop-ish widths */
-  /* line 59, ../sass/breakpoints/_960up.scss */
+  /* line 60, ../sass/breakpoints/_960up.scss */
   .dfull {
     width: 100% !important;
   }
 
-  /* line 62, ../sass/breakpoints/_960up.scss */
+  /* line 63, ../sass/breakpoints/_960up.scss */
   .d1of2 {
     width: 50% !important;
     float: left;
   }
 
-  /* line 66, ../sass/breakpoints/_960up.scss */
+  /* line 67, ../sass/breakpoints/_960up.scss */
   .d1of3 {
     width: 33% !important;
     float: left;
   }
 
-  /* line 70, ../sass/breakpoints/_960up.scss */
+  /* line 71, ../sass/breakpoints/_960up.scss */
   .d2of3 {
     width: 67% !important;
     float: left;
